fix overflow

--- a/src/components/Main/style.scss
+++ b/src/components/Main/style.scss
@@ -107,7 +107,7 @@ div {
     padding-bottom: 0;
     padding-top: 100px;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     overflow-x: hidden;
   }
 }
